# kyllini

./: .ghci  .gitignore  .gitmodules  .travis.yml  ArtifactOverview.md  LICENSE  Makefile  Makefile.in  README.md  build-icfp17.sh  cabal.haskell-ci  configure  configure.ac  kyllini.buildinfo.in  kyllini.cabal  runtests.py  stack.yaml  validate
.github/workflows/: haskell-ci.yml
artifact/: .gitignore  Makefile  icfp17.json
artifact/files/icfp17/: dot-emacs  dot-vimrc  emacs-init.el  favorites.override
artifact/http/: preseed.cfg
artifact/scripts/ubuntu/: atom.sh  base.sh  cleanup.sh  desktop.sh  editors.sh  icfp17.sh  misc.sh  upgrade.sh  vmware.sh
doc/: Makefile  grammar.md  language.md  userguide.md
doc/figs/: classes.dot
include/: KzcConfig.h.in  KzcSysTools.h.in
lib/: prelude.kz
libkz/include/: fixed.hpp  kz.h
libkz/include/kz/: bits.h  driver.h  ext.h  rt.h  threads.h  types.h
libkz/include/sora/: fft.h  fft_coeffs.h  fft_r4difx.h  ieee80211const.h  ifft_r4difx.h  intalglutx.h  intalgx.h  viterbicore.h  viterbilut.h
libkz/src/: bits.c  driver.c  ext.c  ext_zira.c  io.cpp  kz.c  rt.c  threads.c
libkz/src/sora/: kz_sora.cpp
mk/: common.mk  common.mk.in  perf.mk  virtual.mk
perf/: README.md  master-2f2e7096.csv  pepm-component-perf.sh  perf-91ad328f.csv  perf-all.sh  perf-components.sh  perf-icfp17.sh  perf-wifi-sid.sh  perf-wifi.sh  perf-ziria.sh  perf.awk  perf.sh  perfrun.sh  plot-icfp17.R  plot.R
perf/data/: master-8bf1beeb-perf.txt  pepm-component-2016-09-28-perf-20592cb4.csv  perf-4544749e.csv  wifi-2016-09-12-master-27bcfb2c.csv  wifi-2016-09-12-pepm-peval-23dfb0a2.csv  wifi-2016-09-26-perf-5e5ec39e.csv  wifi-2016-09-28-perf-a5734919.csv  wifi-sid-2016-09-26-perf-5e5ec39e.csv  wifi-sid-2016-09-28-perf-a5734919.csv  ziria-2016-09-12-mainland-ghc710-b5f8a17c.csv  ziria-2016-09-26-mainland-ghc710-b5f8a17c.csv  ziria-2016-09-28-mainland-ghc710-b5f8a17c.csv
src/: Main.hs  Opts.hs
src/Data/: Digraph.hs
src/KZC/: Cg.hs  Check.hs  Compiler.hs  Config.hs  Derive.hs  Driver.hs  Error.hs  Flags.hs  Fuel.hs  Globals.hs  Interp.hs  Label.hs  LambdaLift.hs  Lint.hs  Monad.hs  Monomorphize.hs  Name.hs  Platform.hs  Pretty.hs  Rename.hs  Staged.hs  Summary.hs  SysTools.hs  Trace.hs  Traits.hs  Uniq.hs  Vars.hs
src/KZC/Analysis/: Abs.hs  Dataflow.hs  Interval.hs  Lattice.hs  Lut.hs  NeedDefault.hs  Occ.hs  Range.hs  Rate.hs  ReadWriteSet.hs  RefFlow.hs  StaticRef.hs
src/KZC/Auto/: Cg.hs  Comp.hs  Flatten.hs  Fusion.hs  Label.hs  Lint.hs  Smart.hs  Syntax-instances.hs  Syntax.hs  Transform.hs
src/KZC/Auto/Cg/: CExp.hs  (+1 more)
src/KZC/Backend/: C.hs
src/KZC/Cg/: CExp.hs  Code.hs  Monad.hs  Monad.hs-boot  Util.hs
src/KZC/Check/: Monad.hs  Path.hs  Smart.hs  State.hs  Types-instances.hs  Types.hs
src/KZC/Compiler/: Module.hs  Types.hs
src/KZC/Core/: Comp.hs  Embed.hs  Enum.hs  Label.hs  Lint.hs  Smart.hs  Syntax-instances.hs  Syntax.hs  Transform.hs
src/KZC/Driver/: Opts.hs
src/KZC/Expr/: Enum.hs  Lint.hs  Smart.hs  Syntax-instances.hs  Syntax.hs  ToCore.hs
src/KZC/LambdaLift/: Monad.hs
src/KZC/Lint/: Monad.hs  State.hs
src/KZC/Monad/: KT.hs  SEFKT.hs
src/KZC/Optimize/: Autolut.hs  Coalesce.hs  Eval.hs  Flatten.hs  FloatViews.hs  Fuse.hs  HashConsConsts.hs  LowerGenerators.hs  LowerViews.hs  LutToGen.hs  Simplify.hs
src/KZC/Quote/: C.hs
src/KZC/Rename/: Monad.hs  State.hs
src/KZC/Transform/: Auto.hs  LambdaLift.hs
src/KZC/Util/: Derive.hs  EnumSet.hs  Env.hs  Error.hs  Interval.hs  Lattice.hs  Logic.hs  Memoize.hs  Pretty.hs  SetLike.hs  Staged.hs  Summary.hs  SysTools.hs  Trace.hs  Uniq.hs  ZEncode.hs
src/Language/Core/: Smart.hs  Syntax-instances.hs  Syntax.hs  Syntax.hs-instances
src/Language/Ziria/: Parser.hs  Smart.hs  Syntax-instances.hs  Syntax.hs  Syntax.hs-instances
testsuite/backend/: Makefile  array-init-interpreter.T  array-init.T  array-val-complex.T  array1.T  array2.T  arrayDone.T  arrayDone2.T  autolut.T  bigallocs.T  bin_struct_io.T  bit0.T  bit1.T  bit2.T  bitarr0.T  bitarr1.T  bitarr2.T  bug102.T  bug117.T  closurebug.T  closurebug1.T  complex1.T  dynarray.T  finalizer.T  for-16.T  for-32.T  for-8.T  fore.T  ifcomp.T  inefficient-modulating.T  inline-nonsimpl.T  let1.T  let2.T  let3.T  let_comp.T  let_test.T  mem.T  mitig_test.T  modulating.T  multitake.T  (+66 more)
testsuite/kzc-issues/: Makefile  fuse01.T  fuse01.kz  fuse02.T  fuse02.infile  fuse02.kz  fuse02.outfile.ground  fuse03.T  fuse03.kz  fuse03.outfile.ground  fuse04.T  fuse04.infile  fuse04.kz  fuse05.T  fuse05.infile  fuse05.kz  fuse06.T  fuse06.kz  fuse06.outfile.ground  fuse07.T  fuse07.infile  fuse07.kz  fuse07.outfile.ground  fuse08.T  fuse08.infile  fuse08.kz  fuse08.outfile.ground  fuse09.T  fuse09.kz  fuse10.T  fuse10.infile  fuse10.kz  fuse11.T  fuse11.kz  fuse11.outfile.ground  fuse12.T  fuse12.kz  fuse12.outfile.ground  issue03.T  issue04.T  (+49 more)
testsuite/lib/: externals.blk
testsuite/libs/: Makefile  test_complex16.T  test_complex16.outfile.ground  test_complex32.T  test_complex32.infile  test_complex32.outfile.ground  test_fft.T  test_ifft.T  test_int16.T  test_int32.T  test_logical.T
testsuite/lut/: complexlut.T
testsuite/polymorphism/: id.T  id.blk  inc01.T  inc01.kz  inc02.T  inc02.kz  inc03.T  inc03.kz  poly_emit.T  poly_emit.blk  poly_emit2.T  poly_emit2.blk  poly_take.T  poly_take.blk
testsuite/tests/backend/: Makefile
testsuite/tests/kzc-issues/: Makefile  issue03.wpl  issue04.wpl  issue05.wpl  issue06.wpl  issue07.wpl  issue08.outfile.ground  issue17.wpl  issue19.wpl  issue27.wpl  issue32.outfile.ground  repeat06.wpl  repeat07.wpl
testsuite/tests/libs/: Makefile  test_complex16.infile  test_int16.outfile.ground  test_int32.outfile.ground
testsuite/tests/parser/: t3.pp.wpl
testsuite/tests/threads/: map1.outfile.ground  map1.wpl  map2.infile  map2.outfile.ground  map2.wpl  map3.infile  map5.infile  map5.outfile.ground  map5.wpl
testsuite/threads/: map1.T  map2.T  map2.outfile.ground  map2.wpl  map3.T  map3.outfile.ground  map3.wpl  map4.T  map4.outfile.ground  map4.wpl  map5.T
tools/: BlinkDiff.hs
tools/kzc/: Main.hs
(+33 files in other folders)
