name:          kyllini
version:       0.1
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2014-2015 Drexel University
author:        Geoffrey Mainland <mainland@drexel.edu>
maintainer:    Geoffrey Mainland <mainland@drexel.edu>
stability:     alpha
homepage:      http://www.cs.drexel.edu/~mainland/
category:      Language
synopsis:      Kyllini compiler.
tested-with:   GHC==7.10.3

description:
  kzc is an alternative compiler for the Ziria language

build-type: Configure

executable kzc
  main-is:
    Main.hs

  default-language:
    Haskell98

  other-modules:
    Language.Ziria.Parser.Lexer
    Language.Ziria.Parser.Parser

  build-depends:
    array                  >= 0.2      && < 0.6,
    base                   >= 4        && < 5,
    binary                 >= 0.6      && < 0.8,
    bytestring             >= 0.9      && < 0.11,
    containers             >= 0.5      && < 0.6,
    data-binary-ieee754    >= 0.4      && < 0.5,
    directory              >= 1.2      && < 1.3,
    exception-mtl          >= 0.3      && < 0.5,
    exception-transformers >= 0.3      && < 0.5,
    filepath               >= 1.3      && < 1.5,
    language-c-quote       >= 0.11.6   && < 0.12,
    logict                 >= 0.6      && < 0.7,
    mainland-pretty        >= 0.4.1.2  && < 0.5,
    mtl                    >= 2.0      && < 3,
    primitive              >= 0.6      && < 0.7,
    process                >= 1.0      && < 1.3,
    ref-fd                 >= 0.3      && < 0.5,
    srcloc                 >= 0.5      && < 0.6,
    syb                    >= 0.3      && < 0.7,
    symbol                 >= 0.2.4    && < 0.3,
    text                   >= 1.1      && < 1.3,
    template-haskell       >= 2.9      && < 2.11,
    transformers           >= 0.2      && < 0.5,
    transformers-compat    >= 0.3      && < 0.6,
    vector                 >= 0.11     && < 0.12

  build-tools:
    alex >=3,
    happy

  ghc-options:
    -Wall -fno-warn-name-shadowing

  hs-source-dirs:
    src

  include-dirs:
    include
    src

executable BlinkDiff
  main-is:
    BlinkDiff.hs

  default-language:
    Haskell98

  build-depends:
    base                   >= 4     && < 5,
    containers             >= 0.5   && < 0.6,
    parsec                 >= 3.1   && < 3.2

  hs-source-dirs:
    tools

  ghc-options:
    -fwarn-incomplete-patterns -Werror

source-repository head
  type:     git
  location: git://github.com/mainland/kyllini.git
