name:          kyllini
version:       0.1
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2014-2017 Drexel University
author:        Geoffrey Mainland <mainland@drexel.edu>
maintainer:    Geoffrey Mainland <mainland@drexel.edu>
stability:     alpha
homepage:      http://www.cs.drexel.edu/~mainland/
category:      Language
synopsis:      Kyllini compiler.
tested-with:   GHC==8.0.2

description:
  kzc is an alternative compiler for the Ziria language

build-type: Configure

extra-source-files:
  Makefile.in
  configure
  include/KzcSysTools.h.in
  src/Language/Ziria/Parser/Classic.hs
  src/Language/Ziria/Parser/Kyllini.hs
  src/Language/Ziria/Parser/LenientClassic.hs
  src/Language/Ziria/Parser/Lexer.hs

library
  default-language: Haskell2010

  exposed-modules:
    Data.Digraph
    KZC.Analysis.Interval
    KZC.Analysis.Lattice
    KZC.Analysis.Lattice.Properties
    KZC.Analysis.Lut
    KZC.Analysis.NeedDefault
    KZC.Analysis.Occ
    KZC.Analysis.Rate
    KZC.Analysis.ReadWriteSet
    KZC.Analysis.RefFlow
    KZC.Backend.C
    KZC.Backend.C.CExp
    KZC.Backend.C.Code
    KZC.Backend.C.Monad
    KZC.Backend.C.Util
    KZC.Check
    KZC.Check.Monad
    KZC.Check.Path
    KZC.Check.Smart
    KZC.Check.State
    KZC.Check.Types
    KZC.Config
    KZC.Compiler
    KZC.Compiler.Module
    KZC.Compiler.Types
    KZC.Core.Comp
    KZC.Core.Embed
    KZC.Core.Enum
    KZC.Core.Label
    KZC.Core.Lint
    KZC.Core.Smart
    KZC.Core.Syntax
    KZC.Core.Transform
    KZC.Driver
    KZC.Driver.Opts
    KZC.Expr.Enum
    KZC.Expr.Lint
    KZC.Expr.Lint.Monad
    KZC.Expr.Smart
    KZC.Expr.Syntax
    KZC.Expr.ToCore
    KZC.Globals
    KZC.Interp
    KZC.Monad
    KZC.Monad.KT
    KZC.Monad.SEFKT
    KZC.Label
    KZC.LambdaLift
    KZC.Monomorphize
    KZC.Name
    KZC.Optimize.Autolut
    KZC.Optimize.Coalesce
    KZC.Optimize.Eval
    KZC.Optimize.Eval.Monad
    KZC.Optimize.Eval.PArray
    KZC.Optimize.Eval.Val
    KZC.Optimize.FloatViews
    KZC.Optimize.Fuse
    KZC.Optimize.HashConsConsts
    KZC.Optimize.LowerGenerators
    KZC.Optimize.LowerViews
    KZC.Optimize.LutToGen
    KZC.Optimize.Simplify
    KZC.Platform
    KZC.Quote.C
    KZC.Rename
    KZC.Rename.Monad
    KZC.Rename.State
    KZC.Traits
    KZC.Util.Derive
    KZC.Util.EnumSet
    KZC.Util.Error
    KZC.Util.Logic
    KZC.Util.Pretty
    KZC.Util.SetLike
    KZC.Util.Staged
    KZC.Util.Summary
    KZC.Util.SysTools
    KZC.Util.Trace
    KZC.Util.Uniq
    KZC.Util.ZEncode
    KZC.Vars
    Language.Ziria.Parser.Alex
    Language.Ziria.Parser.Classic
    Language.Ziria.Parser.Exceptions
    Language.Ziria.Parser.Kyllini
    Language.Ziria.Parser.LenientClassic
    Language.Ziria.Parser.Lexer
    Language.Ziria.Parser.Monad
    Language.Ziria.Parser.Tokens
    Language.Ziria.Parser.Util
    Language.Ziria.Parser
    Language.Ziria.Smart
    Language.Ziria.Syntax

  build-depends:
    array                  >= 0.2      && < 0.6,
    base                   >= 4.9      && < 5,
    binary                 >= 0.6      && < 0.9,
    bytestring             >= 0.9      && < 0.11,
    containers             >= 0.5      && < 0.6,
    data-binary-ieee754    >= 0.4      && < 0.5,
    directory              >= 1.2      && < 1.4,
    exception-mtl          >= 0.3      && < 0.5,
    exception-transformers >= 0.3      && < 0.5,
    filepath               >= 1.3      && < 1.5,
    language-c-quote       >= 0.11.6   && < 0.12,
    logict                 >= 0.6      && < 0.7,
    mainland-pretty        >= 0.5      && < 0.6,
    mtl                    >= 2.0      && < 3,
    primitive              >= 0.6      && < 0.7,
    process                >= 1.0      && < 1.5,
    ref-fd                 >= 0.3      && < 0.5,
    srcloc                 >= 0.5      && < 0.6,
    syb                    >= 0.3      && < 0.7,
    symbol                 >= 0.2.4    && < 0.3,
    text                   >= 1.1      && < 1.3,
    template-haskell       >= 2.9      && < 2.12,
    transformers           >= 0.2      && < 0.6,
    transformers-compat    >= 0.3      && < 0.6,
    vector                 >= 0.11     && < 0.12,
    QuickCheck             >= 2.8      && < 2.10

  build-tools:
    alex >=3,
    happy

  ghc-options:
    -Wall -fno-warn-name-shadowing
    -- XXX Ugh! Needed for unifyCompiledExpTypes in src/KZC/Check.hs
    -fmax-pmcheck-iterations=10000000

  hs-source-dirs:
    src

  include-dirs:
    include
    src

executable kzc
  main-is:
    Main.hs

  default-language:
    Haskell2010

  build-depends:
    kyllini,
    base >= 4 && < 5

  ghc-options:
    -Wall -fno-warn-name-shadowing

  hs-source-dirs:
    tools/kzc

executable BlinkDiff
  main-is:
    BlinkDiff.hs

  default-language:
    Haskell2010

  build-depends:
    base                   >= 4     && < 5,
    containers             >= 0.5   && < 0.6,
    parsec                 >= 3.1   && < 3.2

  hs-source-dirs:
    tools

  ghc-options:
    -fwarn-incomplete-patterns

source-repository head
  type:     git
  location: git://github.com/mainland/kyllini.git
